PokePro/styles/style.css
@import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
@import url('https://fonts.googleapis.com/css2?family=Anton+SC&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Pirata+One&display=swap'); 
@import url('https://fonts.googleapis.com/css2?family=Anton+SC&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Pirata+One&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');

/* Header */
nav{
    background-color: #434045;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
}
nav img{
    width: 150px;
}
nav a{
    justify-self: center;
    align-self: center;
    padding: 35px;
    color:#fcffeb;
    font-family: "Anton SC", sans-serif;
    font-size: 2em;
}
nav a:hover {
    color: #fe604c;
    background-color: #2bb6c2;
}

/* Hero Image */
.hero{
    display: grid;
    grid-template-columns: 1fr 3fr 1fr;
    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;

    text-align: center;
}
.hero img{
    width: 100%;
    grid-column: 1/4;
    grid-row: 1/4;
    z-index: -1;
    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 70%, rgba(0, 0, 0, 0) 100%);
}
.hero-box{
    text-align: center;
    justify-self: center;
    text-align: center;
    grid-column: 2/3;
    grid-row: 1/2;
    font-family: "Anton SC", sans-serif;
    font-size: 2.5em;
    color:#434045;
}

/* Body */
#intro{
    text-align: center;
    margin-left: 4em;
    margin-right: 4em;
    margin-bottom: 5em;
    margin-top: 5em;
    font-family: "Roboto Condensed", sans-serif;
    font-size: 1.5em;
}

/* Footer */
footer{
    background-color: #434045;
    display: flex;
    justify-content: space-around;
    align-content: center;
}
.footer-left{
    display: flex;
    justify-content: space-around;
    align-content: center;
}
.footer-right{
    display: flex;
    justify-content: space-around;
    align-content: center;
}
footer a{
    justify-self: center;
    align-self: center;
    padding: 35px;
    color:#fcffeb;
    font-family: "Anton SC", sans-serif;
    font-size: 1.5em;
}
footer a:hover {
    color: #fe604c;
    background-color: #2bb6c2;
}
footer img{
    width: 75px;
}

